--- a/mydiabprod/templates/mydiabprod/blog_counter.html
+++ b/mydiabprod/templates/mydiabprod/blog_counter.html
@@ -9,30 +9,32 @@
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Pers!</title>
 
-	<!--<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">-->
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-<!--<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> -->
+
  
   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<!--<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.js"></script>   -->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
 integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"  
 integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
+<link href="https://printjs-4de6.kxcdn.com/print.min.css" rel="stylesheet">
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.js"></script>
+<script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
 {% load static %}
 <link rel="stylesheet" href="{% static 'mydiabprod/blogstyles.css' %}">
 <link rel="stylesheet" href="{% static 'mydiabprod/results.css' %}">
+<!--<link rel="stylesheet" href="{% static 'mydiabprod/print.css' %}">-->
 
 <script src="{% static 'mydiabprod/blogfunc.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/blogfuncfooter.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/loadjson.js' %} "type="text/javascript"></script>
 <script src="{% static 'mydiabprod/getjson.js' %} "type="text/javascript"></script>
+<!--<script src="{% static 'mydiabprod/print.js' %} "type="text/javascript"></script>-->
 <!--<script src="{% static 'mydiabprod/register.js' %} "type="text/javascript"></script>-->
 </head>
 <body>
